src/app/core/site-container/site-container.component.scss
@import '../../../styles/shared';
@import './shared';

$skip-link-z-index: 10002;

:host {
	display: flex;
	flex-direction: column;
	height: 100vh;
	overflow: auto;
}

.site-body {
	flex: 1 1;
	overflow: auto;
}

.site-banner {
	text-align: center;
	width: 100%;
}

.copyright-banner {
	background-color: $copyright-banner-bg;
	color: $copyright-banner-color;
	height: $copyright-banner-height;
}

.footer-banner {
	background-color: $footer-banner-bg;
	color: $footer-banner-color;
	height: $footer-banner-height;
}

.header-banner {
	background-color: $header-banner-bg;
	color: $header-banner-color;
	height: $header-banner-height;
}

.site-content {
	padding: $site-content-padding-y $site-content-padding-x;
}

a.skip-link {
	position: absolute;
	top: -1000em;

	&:focus {
		position: fixed;
		top: 0;
		left: 0;
		z-index: $skip-link-z-index;

		padding: 10px;
		background-color: $ux-color-primary;
		color: $color-white;
		text-decoration: underline;
	}
}

